packages/coast_audio_miniaudio/lib/generated/ma_bridge_bindings.dart


  late final _mab_audio_converter_process_pcm_framesPtr = _lookup<
      ffi.NativeFunction<
          mab_result Function(
              ffi.Pointer<mab_audio_converter>,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<uint64>,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<uint64>)>>('mab_audio_converter_process_pcm_frames');
  late final _mab_audio_converter_process_pcm_frames =
      _mab_audio_converter_process_pcm_framesPtr.asFunction<
          int Function(
              ffi.Pointer<mab_audio_converter>,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<uint64>,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<uint64>)>();

  int mab_audio_converter_get_input_latency(
    ffi.Pointer<mab_audio_converter> pConverter,
  ) {
    return _mab_audio_converter_get_input_latency(
      pConverter,
    );
  }

  late final _mab_audio_converter_get_input_latencyPtr = _lookup<
          ffi.NativeFunction<
              uint64 Function(ffi.Pointer<mab_audio_converter>)>>(
      'mab_audio_converter_get_input_latency');
  late final _mab_audio_converter_get_input_latency =
      _mab_audio_converter_get_input_latencyPtr
          .asFunction<int Function(ffi.Pointer<mab_audio_converter>)>();

  int mab_audio_converter_get_output_latency(
    ffi.Pointer<mab_audio_converter> pConverter,
  ) {
    return _mab_audio_converter_get_output_latency(
      pConverter,
    );
  }

  late final _mab_audio_converter_get_output_latencyPtr = _lookup<
          ffi.NativeFunction<
              uint64 Function(ffi.Pointer<mab_audio_converter>)>>(
      'mab_audio_converter_get_output_latency');
  late final _mab_audio_converter_get_output_latency =
      _mab_audio_converter_get_output_latencyPtr
          .asFunction<int Function(ffi.Pointer<mab_audio_converter>)>();

  int mab_audio_converter_get_required_input_frame_count(
    ffi.Pointer<mab_audio_converter> pConverter,
    int outputFrameCount,
    ffi.Pointer<uint64> pInputFrameCount,
  ) {
    return _mab_audio_converter_get_required_input_frame_count(
      pConverter,
      outputFrameCount,
      pInputFrameCount,
    );
  }

  late final _mab_audio_converter_get_required_input_frame_countPtr = _lookup<
          ffi.NativeFunction<
              mab_result Function(ffi.Pointer<mab_audio_converter>, uint64,
                  ffi.Pointer<uint64>)>>(
      'mab_audio_converter_get_required_input_frame_count');
  late final _mab_audio_converter_get_required_input_frame_count =
      _mab_audio_converter_get_required_input_frame_countPtr.asFunction<
          int Function(
              ffi.Pointer<mab_audio_converter>, int, ffi.Pointer<uint64>)>();

  int mab_audio_converter_get_expected_output_frame_count(
    ffi.Pointer<mab_audio_converter> pConverter,
    int inputFrameCount,
    ffi.Pointer<uint64> pOutputFrameCount,
  ) {
    return _mab_audio_converter_get_expected_output_frame_count(
      pConverter,
      inputFrameCount,
      pOutputFrameCount,
    );
  }

  late final _mab_audio_converter_get_expected_output_frame_countPtr = _lookup<
          ffi.NativeFunction<
              mab_result Function(ffi.Pointer<mab_audio_converter>, uint64,
                  ffi.Pointer<uint64>)>>(
      'mab_audio_converter_get_expected_output_frame_count');
  late final _mab_audio_converter_get_expected_output_frame_count =
      _mab_audio_converter_get_expected_output_frame_countPtr.asFunction<
          int Function(
              ffi.Pointer<mab_audio_converter>, int, ffi.Pointer<uint64>)>();

  int mab_audio_converter_reset(
    ffi.Pointer<mab_audio_converter> pConverter,
  ) {
    return _mab_audio_converter_reset(
      pConverter,
    );
  }

  late final _mab_audio_converter_resetPtr = _lookup<
      ffi.NativeFunction<
          mab_result Function(
              ffi.Pointer<mab_audio_converter>)>>('mab_audio_converter_reset');
  late final _mab_audio_converter_reset = _mab_audio_converter_resetPtr
      .asFunction<int Function(ffi.Pointer<mab_audio_converter>)>();

  void mab_audio_converter_uninit(
    ffi.Pointer<mab_audio_converter> pConverter,
  ) {
    return _mab_audio_converter_uninit(
      pConverter,
    );
  }

  late final _mab_audio_converter_uninitPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<mab_audio_converter>)>>('mab_audio_converter_uninit');
  late final _mab_audio_converter_uninit = _mab_audio_converter_uninitPtr
      .asFunction<void Function(ffi.Pointer<mab_audio_converter>)>();

  mab_audio_decoder_config mab_audio_decoder_config_init(
    int format,
    int sampleRate,
    int channels,
  ) {
    return _mab_audio_decoder_config_init(
      format,
      sampleRate,
      channels,
    );
  }

  late final _mab_audio_decoder_config_initPtr = _lookup<
      ffi.NativeFunction<
          mab_audio_decoder_config Function(
              ffi.Int32, ffi.Int, ffi.Int)>>('mab_audio_decoder_config_init');
  late final _mab_audio_decoder_config_init = _mab_audio_decoder_config_initPtr
      .asFunction<mab_audio_decoder_config Function(int, int, int)>();

  int mab_audio_decoder_get_info(
    ffi.Pointer<ffi.Char> pFilePath,
    ffi.Pointer<mab_audio_decoder_info> pInfo,
  ) {
    return _mab_audio_decoder_get_info(
      pFilePath,
      pInfo,
    );
  }

  late final _mab_audio_decoder_get_infoPtr = _lookup<
          ffi.NativeFunction<
              mab_result Function(
                  ffi.Pointer<ffi.Char>, ffi.Pointer<mab_audio_decoder_info>)>>(
      'mab_audio_decoder_get_info');
  late final _mab_audio_decoder_get_info =
      _mab_audio_decoder_get_infoPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<mab_audio_decoder_info>)>();

  int mab_audio_decoder_init(
    ffi.Pointer<mab_audio_decoder> pDecoder,
    mab_audio_decoder_config config,
    mab_audio_decoder_read_proc onRead,
    mab_audio_decoder_seek_proc onSeek,
    ffi.Pointer<ffi.Void> pUserData,
  ) {
    return _mab_audio_decoder_init(
      pDecoder,
      config,
      onRead,
      onSeek,
      pUserData,
    );
  }

  late final _mab_audio_decoder_initPtr = _lookup<
      ffi.NativeFunction<
          mab_result Function(
              ffi.Pointer<mab_audio_decoder>,
              mab_audio_decoder_config,
              mab_audio_decoder_read_proc,
              mab_audio_decoder_seek_proc,
              ffi.Pointer<ffi.Void>)>>('mab_audio_decoder_init');
  late final _mab_audio_decoder_init = _mab_audio_decoder_initPtr.asFunction<
      int Function(
          ffi.Pointer<mab_audio_decoder>,
          mab_audio_decoder_config,
          mab_audio_decoder_read_proc,
          mab_audio_decoder_seek_proc,
          ffi.Pointer<ffi.Void>)>();

  int mab_audio_decoder_init_file(
    ffi.Pointer<mab_audio_decoder> pDecoder,
    ffi.Pointer<ffi.Char> pFilePath,
    mab_audio_decoder_config config,
  ) {
    return _mab_audio_decoder_init_file(
      pDecoder,
      pFilePath,
      config,
    );
  }

  late final _mab_audio_decoder_init_filePtr = _lookup<
      ffi.NativeFunction<
          mab_result Function(
              ffi.Pointer<mab_audio_decoder>,
              ffi.Pointer<ffi.Char>,
              mab_audio_decoder_config)>>('mab_audio_decoder_init_file');
  late final _mab_audio_decoder_init_file =
      _mab_audio_decoder_init_filePtr.asFunction<
          int Function(ffi.Pointer<mab_audio_decoder>, ffi.Pointer<ffi.Char>,
              mab_audio_decoder_config)>();

  int mab_audio_decoder_decode(
    ffi.Pointer<mab_audio_decoder> pDecoder,
    ffi.Pointer<ffi.Float> pOutput,
    int frameCount,
    ffi.Pointer<uint64> pFramesRead,
  ) {
    return _mab_audio_decoder_decode(
      pDecoder,
      pOutput,
      frameCount,
      pFramesRead,
    );
  }

  late final _mab_audio_decoder_decodePtr = _lookup<
      ffi.NativeFunction<
          mab_result Function(
              ffi.Pointer<mab_audio_decoder>,
              ffi.Pointer<ffi.Float>,
              uint64,
              ffi.Pointer<uint64>)>>('mab_audio_decoder_decode');
  late final _mab_audio_decoder_decode =
      _mab_audio_decoder_decodePtr.asFunction<
          int Function(ffi.Pointer<mab_audio_decoder>, ffi.Pointer<ffi.Float>,
              int, ffi.Pointer<uint64>)>();

  int mab_audio_decoder_get_cursor(
    ffi.Pointer<mab_audio_decoder> pDecoder,
    ffi.Pointer<uint64> pCursor,
  ) {
    return _mab_audio_decoder_get_cursor(
      pDecoder,
      pCursor,
    );
  }

  late final _mab_audio_decoder_get_cursorPtr = _lookup<
      ffi.NativeFunction<
          mab_result Function(ffi.Pointer<mab_audio_decoder>,
              ffi.Pointer<uint64>)>>('mab_audio_decoder_get_cursor');
  late final _mab_audio_decoder_get_cursor =
      _mab_audio_decoder_get_cursorPtr.asFunction<
          int Function(ffi.Pointer<mab_audio_decoder>, ffi.Pointer<uint64>)>();

  int mab_audio_decoder_set_cursor(
    ffi.Pointer<mab_audio_decoder> pDecoder,
    int cursor,
  ) {
    return _mab_audio_decoder_set_cursor(
      pDecoder,
      cursor,
    );
  }

  late final _mab_audio_decoder_set_cursorPtr = _lookup<
      ffi.NativeFunction<
          mab_result Function(ffi.Pointer<mab_audio_decoder>,
              uint64)>>('mab_audio_decoder_set_cursor');
  late final _mab_audio_decoder_set_cursor = _mab_audio_decoder_set_cursorPtr
      .asFunction<int Function(ffi.Pointer<mab_audio_decoder>, int)>();

  int mab_audio_decoder_get_length(
    ffi.Pointer<mab_audio_decoder> pDecoder,
    ffi.Pointer<uint64> pLength,
  ) {
    return _mab_audio_decoder_get_length(
      pDecoder,
      pLength,
    );
  }

  late final _mab_audio_decoder_get_lengthPtr = _lookup<
      ffi.NativeFunction<
          mab_result Function(ffi.Pointer<mab_audio_decoder>,
              ffi.Pointer<uint64>)>>('mab_audio_decoder_get_length');
  late final _mab_audio_decoder_get_length =
      _mab_audio_decoder_get_lengthPtr.asFunction<
          int Function(ffi.Pointer<mab_audio_decoder>, ffi.Pointer<uint64>)>();

  int mab_audio_decoder_uninit(
    ffi.Pointer<mab_audio_decoder> pDecoder,
  ) {
    return _mab_audio_decoder_uninit(
      pDecoder,
    );
  }

  late final _mab_audio_decoder_uninitPtr = _lookup<
      ffi.NativeFunction<
          mab_result Function(
              ffi.Pointer<mab_audio_decoder>)>>('mab_audio_decoder_uninit');
  late final _mab_audio_decoder_uninit = _mab_audio_decoder_uninitPtr
      .asFunction<int Function(ffi.Pointer<mab_audio_decoder>)>();

  mab_low_pass_filter_config mab_low_pass_filter_config_init(
    int format,
    int sampleRate,
    int channels,
    int order,
    double cutoffFrequency,
  ) {
    return _mab_low_pass_filter_config_init(
      format,
      sampleRate,
      channels,
      order,
      cutoffFrequency,
    );
  }

  late final _mab_low_pass_filter_config_initPtr = _lookup<
      ffi.NativeFunction<
          mab_low_pass_filter_config Function(ffi.Int32, u_int32_t, u_int32_t,
              u_int32_t, ffi.Double)>>('mab_low_pass_filter_config_init');
  late final _mab_low_pass_filter_config_init =
      _mab_low_pass_filter_config_initPtr.asFunction<
          mab_low_pass_filter_config Function(int, int, int, int, double)>();

  int mab_low_pass_filter_init(
    ffi.Pointer<mab_low_pass_filter> pLPF,
    mab_low_pass_filter_config config,
  ) {
    return _mab_low_pass_filter_init(
      pLPF,
      config,
    );
  }

  late final _mab_low_pass_filter_initPtr = _lookup<
      ffi.NativeFunction<
          mab_result Function(ffi.Pointer<mab_low_pass_filter>,
              mab_low_pass_filter_config)>>('mab_low_pass_filter_init');
  late final _mab_low_pass_filter_init =
      _mab_low_pass_filter_initPtr.asFunction<
          int Function(
              ffi.Pointer<mab_low_pass_filter>, mab_low_pass_filter_config)>();
